created form on .html and component.ts

--- a/src/app/contact-servicing-repairs/contact-servicing-repairs.component.html
+++ b/src/app/contact-servicing-repairs/contact-servicing-repairs.component.html
@@ -1,1 +1,396 @@
 <p>contact-servicing-repairs works!</p>
+<!-- <form>
+    <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+    <label for="vehicle1"> I have a car</label><br>
+    <input type="checkbox" id="vehicle2" name="vehicle2" value="Car">
+    <label for="vehicle2"> I have a car</label><br>
+    <input type="checkbox" id="vehicle3" name="vehicle3" value="Boat">
+    <label for="vehicle3"> I have a boat</label>
+  </form> -->
+
+  <div class="ktc-default-section">
+    
+
+    <div class="field-wrapper">    
+    
+        <div class="label-wrapper">      
+            <label for="">Your name*</label>
+        </div>
+    
+        <div class="editor-wrapper">
+    
+            <div class="component-wrapper">
+                
+    <div class="field-container" data-tippy-content="">
+        <input class="field-container__input" data-ktc-notobserved-element="" name="649eade1-c39b-4824-8334-097e9fed9cd6.Name.Value" type="text" value="">
+    </div>
+    
+                <div class="field-validation-valid" data-valmsg-for="649eade1-c39b-4824-8334-097e9fed9cd6.Name.Value" data-valmsg-replace="true"></div><div class="field-validation-valid" data-valmsg-for="649eade1-c39b-4824-8334-097e9fed9cd6.Name" data-valmsg-replace="true"></div>            
+            </div>
+    
+            
+    
+        </div>
+    
+    </div>
+    
+    
+    <div class="field-wrapper">    
+    
+        <div class="label-wrapper">      
+            <label for="">Site name*</label>
+        </div>
+    
+        <div class="editor-wrapper">
+    
+            <div class="component-wrapper">
+                
+    <div class="field-container" data-tippy-content="">
+        <input class="field-container__input" data-ktc-notobserved-element="" name="649eade1-c39b-4824-8334-097e9fed9cd6.Sitename.Value" type="text" value="">
+    </div>
+    
+                <div class="field-validation-valid" data-valmsg-for="649eade1-c39b-4824-8334-097e9fed9cd6.Sitename.Value" data-valmsg-replace="true"></div><div class="field-validation-valid" data-valmsg-for="649eade1-c39b-4824-8334-097e9fed9cd6.Sitename" data-valmsg-replace="true"></div>            
+            </div>
+    
+            
+    
+        </div>
+    
+    </div>
+    
+    
+    <div class="field-wrapper">    
+    
+        <div class="label-wrapper">      
+            <label for="">Reason for contacting JLA</label>
+        </div>
+    
+        <div class="editor-wrapper">
+    
+            <div class="component-wrapper">
+                
+    <div class="field-container" data-tippy-content="">
+        <select class="field-container__input" data-ktc-notobserved-element="" name="649eade1-c39b-4824-8334-097e9fed9cd6.ContactReason.SelectedValue"><option value="Catering">Catering</option>
+    <option value="Laundry">Laundry</option>
+    <option value="Fire">Fire</option>
+    <option value="Heating">Heating</option>
+    </select>
+    </div>
+    
+                <div class="field-validation-valid" data-valmsg-for="649eade1-c39b-4824-8334-097e9fed9cd6.ContactReason.SelectedValue" data-valmsg-replace="true"></div><div class="field-validation-valid" data-valmsg-for="649eade1-c39b-4824-8334-097e9fed9cd6.ContactReason" data-valmsg-replace="true"></div>            
+            </div>
+    
+            
+    
+        </div>
+    
+    </div>
+    
+    
+    <div class="field-wrapper">    
+    
+        <div class="label-wrapper">      
+            <label for="">Email (optional)</label>
+        </div>
+    
+        <div class="editor-wrapper">
+    
+            <div class="component-wrapper">
+                
+    <div class="field-container info-tooltip js-tooltip" data-tippy-content="By providing your email address we can send you information about JLA's products &amp; services and special offers which we think might be of interest to you.">
+        <input class="field-container__input" data-ktc-notobserved-element="" name="649eade1-c39b-4824-8334-097e9fed9cd6.Email.Value" type="text" value="">
+    </div>
+    
+                <div class="field-validation-valid" data-valmsg-for="649eade1-c39b-4824-8334-097e9fed9cd6.Email.Value" data-valmsg-replace="true"></div><div class="field-validation-valid" data-valmsg-for="649eade1-c39b-4824-8334-097e9fed9cd6.Email" data-valmsg-replace="true"></div>            
+            </div>
+    
+            
+    
+        </div>
+    
+    </div>
+    
+    
+    <div class="field-wrapper">    
+    
+        <div class="label-wrapper">      
+            <label for="">Phone number*</label>
+        </div>
+    
+        <div class="editor-wrapper">
+    
+            <div class="component-wrapper">
+                
+    <div class="field-container" data-tippy-content="">
+        <input class="field-container__input" data-ktc-notobserved-element="" name="649eade1-c39b-4824-8334-097e9fed9cd6.PhoneNumber.Value" type="text" value="">
+    </div>
+    
+                <div class="field-validation-valid" data-valmsg-for="649eade1-c39b-4824-8334-097e9fed9cd6.PhoneNumber.Value" data-valmsg-replace="true"></div><div class="field-validation-valid" data-valmsg-for="649eade1-c39b-4824-8334-097e9fed9cd6.PhoneNumber" data-valmsg-replace="true"></div>            
+            </div>
+    
+            
+    
+        </div>
+    
+    </div>
+    
+    
+    <div class="field-wrapper">    
+    
+        <div class="label-wrapper">      
+            <label for="">Postcode*</label>
+        </div>
+    
+        <div class="editor-wrapper">
+    
+            <div class="component-wrapper">
+                
+    <div class="field-container" data-tippy-content="">
+        <input class="field-container__input" data-ktc-notobserved-element="" name="649eade1-c39b-4824-8334-097e9fed9cd6.Postcode.Value" type="text" value="">
+    </div>
+    
+                <div class="field-validation-valid" data-valmsg-for="649eade1-c39b-4824-8334-097e9fed9cd6.Postcode.Value" data-valmsg-replace="true"></div><div class="field-validation-valid" data-valmsg-for="649eade1-c39b-4824-8334-097e9fed9cd6.Postcode" data-valmsg-replace="true"></div>            
+            </div>
+    
+            
+    
+        </div>
+    
+    </div>
+    
+    
+    <div class="field-wrapper">    
+    
+        <div class="label-wrapper">      
+            <label for="">How can we help?</label>
+        </div>
+    
+        <div class="editor-wrapper">
+    
+            <div class="component-wrapper">
+                
+    <div class="field-container" data-tippy-content="">
+        <textarea class="field-container__input" cols="20" data-ktc-notobserved-element="" name="649eade1-c39b-4824-8334-097e9fed9cd6.Howcanwehelp.Value" rows="2"></textarea>
+    </div>
+    
+                <div class="field-validation-valid" data-valmsg-for="649eade1-c39b-4824-8334-097e9fed9cd6.Howcanwehelp.Value" data-valmsg-replace="true"></div><div class="field-validation-valid" data-valmsg-for="649eade1-c39b-4824-8334-097e9fed9cd6.Howcanwehelp" data-valmsg-replace="true"></div>            
+            </div>
+    
+            
+    
+        </div>
+    
+    </div>
+    
+    
+    <div class="field-wrapper">    
+    
+        <div class="label-wrapper">      
+            
+        </div>
+    
+        <div class="editor-wrapper">
+    
+            <div class="component-wrapper">
+                
+    <input class="sr-only" data-ktc-notobserved-element="" name="649eade1-c39b-4824-8334-097e9fed9cd6.stopdropandbot.Value" type="text" value="">
+    
+                <div class="field-validation-valid" data-valmsg-for="649eade1-c39b-4824-8334-097e9fed9cd6.stopdropandbot.Value" data-valmsg-replace="true"></div><div class="field-validation-valid" data-valmsg-for="649eade1-c39b-4824-8334-097e9fed9cd6.stopdropandbot" data-valmsg-replace="true"></div>            
+            </div>
+    
+            
+    
+        </div>
+    
+    </div>
+    
+    
+    <div class="field-wrapper" style="display: none;">    
+    
+        <div class="label-wrapper">      
+            
+        </div>
+    
+        <div class="editor-wrapper">
+    
+            <div class="component-wrapper">
+                <input class="js-context-var" data-context-var="url" name="649eade1-c39b-4824-8334-097e9fed9cd6.ContextIndicatorCurrentURL.Value" type="hidden" value="https://jla.com/contact/contact-servicing-repairs">
+                <div class="field-validation-valid" data-valmsg-for="649eade1-c39b-4824-8334-097e9fed9cd6.ContextIndicatorCurrentURL.Value" data-valmsg-replace="true"></div><div class="field-validation-valid" data-valmsg-for="649eade1-c39b-4824-8334-097e9fed9cd6.ContextIndicatorCurrentURL" data-valmsg-replace="true"></div>            
+            </div>
+    
+            
+    
+        </div>
+    
+    </div>
+    
+    
+    <div class="field-wrapper" style="display: none;">    
+    
+        <div class="label-wrapper">      
+            
+        </div>
+    
+        <div class="editor-wrapper">
+    
+            <div class="component-wrapper">
+                <input class="js-context-var" data-context-var="trafficsource" name="649eade1-c39b-4824-8334-097e9fed9cd6.ContextIndicatorTrafficSource.Value" type="hidden" value="Direct">
+                <div class="field-validation-valid" data-valmsg-for="649eade1-c39b-4824-8334-097e9fed9cd6.ContextIndicatorTrafficSource.Value" data-valmsg-replace="true"></div><div class="field-validation-valid" data-valmsg-for="649eade1-c39b-4824-8334-097e9fed9cd6.ContextIndicatorTrafficSource" data-valmsg-replace="true"></div>            
+            </div>
+    
+            
+    
+        </div>
+    
+    </div>
+    
+    
+    <div class="field-wrapper" style="display: none;">    
+    
+        <div class="label-wrapper">      
+            
+        </div>
+    
+        <div class="editor-wrapper">
+    
+            <div class="component-wrapper">
+                <input class="js-context-var" data-context-var="utmcampaign" name="649eade1-c39b-4824-8334-097e9fed9cd6.UTMCampaign.Value" type="hidden" value="">
+                <div class="field-validation-valid" data-valmsg-for="649eade1-c39b-4824-8334-097e9fed9cd6.UTMCampaign.Value" data-valmsg-replace="true"></div><div class="field-validation-valid" data-valmsg-for="649eade1-c39b-4824-8334-097e9fed9cd6.UTMCampaign" data-valmsg-replace="true"></div>            
+            </div>
+    
+            
+    
+        </div>
+    
+    </div>
+    
+    
+    <div class="field-wrapper" style="display: none;">    
+    
+        <div class="label-wrapper">      
+            
+        </div>
+    
+        <div class="editor-wrapper">
+    
+            <div class="component-wrapper">
+                <input class="js-context-var" data-context-var="cpckeyword" name="649eade1-c39b-4824-8334-097e9fed9cd6.ContextIndicatorCPCKeyword.Value" type="hidden" value="">
+                <div class="field-validation-valid" data-valmsg-for="649eade1-c39b-4824-8334-097e9fed9cd6.ContextIndicatorCPCKeyword.Value" data-valmsg-replace="true"></div><div class="field-validation-valid" data-valmsg-for="649eade1-c39b-4824-8334-097e9fed9cd6.ContextIndicatorCPCKeyword" data-valmsg-replace="true"></div>            
+            </div>
+    
+            
+    
+        </div>
+    
+    </div>
+    
+    
+    <div class="field-wrapper" style="display: none;">    
+    
+        <div class="label-wrapper">      
+            
+        </div>
+    
+        <div class="editor-wrapper">
+    
+            <div class="component-wrapper">
+                <input class="js-context-var" data-context-var="adgroup" name="649eade1-c39b-4824-8334-097e9fed9cd6.ContextIndicatorAdGroup.Value" type="hidden" value="">
+                <div class="field-validation-valid" data-valmsg-for="649eade1-c39b-4824-8334-097e9fed9cd6.ContextIndicatorAdGroup.Value" data-valmsg-replace="true"></div><div class="field-validation-valid" data-valmsg-for="649eade1-c39b-4824-8334-097e9fed9cd6.ContextIndicatorAdGroup" data-valmsg-replace="true"></div>            
+            </div>
+    
+            
+    
+        </div>
+    
+    </div>
+    
+    
+    <div class="field-wrapper" style="display: none;">    
+    
+        <div class="label-wrapper">      
+            
+        </div>
+    
+        <div class="editor-wrapper">
+    
+            <div class="component-wrapper">
+                <input class="js-context-var" data-context-var="refererurl" name="649eade1-c39b-4824-8334-097e9fed9cd6.ContextIndicatorRefererURL.Value" type="hidden" value="https://jla.com/contact">
+                <div class="field-validation-valid" data-valmsg-for="649eade1-c39b-4824-8334-097e9fed9cd6.ContextIndicatorRefererURL.Value" data-valmsg-replace="true"></div><div class="field-validation-valid" data-valmsg-for="649eade1-c39b-4824-8334-097e9fed9cd6.ContextIndicatorRefererURL" data-valmsg-replace="true"></div>            
+            </div>
+    
+            
+    
+        </div>
+    
+    </div>
+    
+    
+    <div class="field-wrapper" style="display: none;">    
+    
+        <div class="label-wrapper">      
+            
+        </div>
+    
+        <div class="editor-wrapper">
+    
+            <div class="component-wrapper">
+                <input class="js-context-var" data-context-var="utmcontent" name="649eade1-c39b-4824-8334-097e9fed9cd6.ContextIndicatorUTMContent.Value" type="hidden" value="">
+                <div class="field-validation-valid" data-valmsg-for="649eade1-c39b-4824-8334-097e9fed9cd6.ContextIndicatorUTMContent.Value" data-valmsg-replace="true"></div><div class="field-validation-valid" data-valmsg-for="649eade1-c39b-4824-8334-097e9fed9cd6.ContextIndicatorUTMContent" data-valmsg-replace="true"></div>            
+            </div>
+    
+            
+    
+        </div>
+    
+    </div>
+    
+    
+    <div class="field-wrapper" style="display: none;">    
+    
+        <div class="label-wrapper">      
+            
+        </div>
+    
+        <div class="editor-wrapper">
+    
+            <div class="component-wrapper">
+                <input class="js-context-var" data-context-var="utmterm" name="649eade1-c39b-4824-8334-097e9fed9cd6.ContextIndicatorUTMTerm.Value" type="hidden" value="">
+                <div class="field-validation-valid" data-valmsg-for="649eade1-c39b-4824-8334-097e9fed9cd6.ContextIndicatorUTMTerm.Value" data-valmsg-replace="true"></div><div class="field-validation-valid" data-valmsg-for="649eade1-c39b-4824-8334-097e9fed9cd6.ContextIndicatorUTMTerm" data-valmsg-replace="true"></div>            
+            </div>
+    
+            
+    
+        </div>
+    
+    </div>
+    
+    
+    <div class="field-wrapper" style="display: none;">    
+    
+        <div class="label-wrapper">      
+            
+        </div>
+    
+        <div class="editor-wrapper">
+    
+            <div class="component-wrapper">
+                <input class="js-context-var" data-context-var="utmsource" name="649eade1-c39b-4824-8334-097e9fed9cd6.ContextIndicatorUTMSource.Value" type="hidden" value="">
+                <div class="field-validation-valid" data-valmsg-for="649eade1-c39b-4824-8334-097e9fed9cd6.ContextIndicatorUTMSource.Value" data-valmsg-replace="true"></div><div class="field-validation-valid" data-valmsg-for="649eade1-c39b-4824-8334-097e9fed9cd6.ContextIndicatorUTMSource" data-valmsg-replace="true"></div>            
+            </div>
+    
+            
+    
+        </div>
+    
+    </div>
+    <button class="header__consult-btn btn btn--reset btn--primary js-modal"
+        data-modal="5d0d7107-8929-4f1f-9a6d-803a0daa1981">
+    Send an enquiry
+</button>
+    
+
+<form action="/action_page.php">
+    <input type="file" id="myFile" name="filename">
+    <input type="submit">
+  </form>
+    </div>
