--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,3 @@
 <p>home works!</p>
 
-<button  routerLink="/contact-servicing-repairs"><h3 class="shadow">Contact Us</h3></button>
+<button  routerLink="/contact"><h3 class="shadow">Contact Us</h3></button>
