Created navbar, uses jla css

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,55 @@
+<link rel="stylesheet" href="https://jla.com/sitefiles/dist/main-c94977dd3eac24de953a.css">
+
+<header class="header has-metric">
+  <div class="header__holder js-header-block">
+    <div class="header__body">
+      <div class="header__container">
+        <div class="header__inner">
+          <div class="header__left">
+            <div class="header__logo-holder">
+              <a href="/">
+                <svg class="icon-svg icon-logo" viewBox="0 0 287.8 112.3">
+                  <use xlink:href="/sitefiles/src/img/icons/symbol/svg/sprite.symbol.svg#icon-logo">
+                  </use>
+                </svg>
+              </a>
+            </div>
+
+            <div class="header__desktop-nav">
+              <a href="/contact" target="_self">Laundry</a>
+              <a href="/contact" target="_self">Catering</a>
+              <a href="/contact" target="_self">OTEX</a>
+              <a href="/contact" target="_self">HVAC</a>
+              <a href="/contact" target="_self">Fire Safety</a>
+              <a href="/contact" target="_self">Infection Control</a>
+              <a href="/contact" target="_self">Contact</a>
+            </div>
+
+          </div>
+
+          <div class="header__content-holder">
+            <div class="header__contact">
+              <a class="InfinityNumber" data-ict-discovery-number="01422822282" data-ict-silent-replacements="true"></a>
+              <p class="header__contact-inner">
+                Call Free:
+              <span id class="header-call-value IfinityNumber clickable contactNo" style="visibility: visible;">
+                <a href="tel:08082397813">0808 239 7813</a>
+              </span>
+              </p>
+
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </div>
+
+</header>
+ 
+
+
+
 
 
 
