--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,9 +1,24 @@
-<p>contact works!</p>
 
 <div class="grid-container grid-container--third">
     <div class="grid-column js-widget-container">
-        <a href="/contact/contact-servicing-repairs" class="contact-blocktext-center">
-            <p>Repairs and Maintenance </p>
+        <a href="/contact/contact-servicing-repairs" class="contact-block text-center">
+            <p class="h3 extrabold sentencecase blue-text">Repairs & Maintenance</p>
+            <p>Book an emergency engineer or arrange planned servicing and maintenance.</p>
+            <p class="btn btn--ghost">Book a visit</p>
         </a>
+    </div>
+    <div class="grid-column js-widget-container">
+        <div class="contact-block text-center primary">
+            <p class="h1 extrabold sentencecase blue-text">Sales Enquiries</p>
+            <p>Get advice on or purchase our commercial laundry, catering, HVAC or fire solutions</p>
+            <p class="btn btn--default">Send an enquiry</p>
+        </div>
+    </div>
+    <div class="grid-column js-widget-container">
+        <div class="contact-block text-center">
+            <p class="h3 extrabold sentencecase blue-text">Accounts & Billing</p>
+            <p>Query your JLA account, contract and invoice and payment information.</p>
+            <p class="btn btn--ghost">Ask a question</p>
+        </div>
     </div>
 </div>
