--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,29 @@
+<!-- <div class="section backgroundlightgrey margin-top0 banner-home-intro theme-default">
+    <div class="grid-container grid-container--full">
+        <div class="grid-column js-widget-container">
 
-<button  routerLink="/contact"><h3 class="shadow">Contact Us</h3></button>
+            <div class="wysiwyg">
+                <div class="section-block padding-top3 padding-bottom2 margin-bottom0 margin-top0">
+                    <h1 class="h3 sentencecase extrabold text-center blue-text ">Certainty starts with an all-inclusive
+                        commercial equipment subscription from JLA</h1>
+                    <div class="grid-container grid-container--full-central">
+                        <div class="grid-column">
+                            <p class="text-center light">All our laundry, catering, heating, AC and fire safety
+                                solutions are available with <span class="bold">'Total Care'</span>, including OTEX.
+                                That means you can get the brand new equipment you need for no capital outlay, and
+                                protect yourself from the cost and hassle of unexpected breakdowns with 7-day emergency
+                                response.</p>
+                            <p class="text-center  padding-bottom0 margin-bottom0"><a href="/total-care"
+                                    class="btn btn--reset btn--ghost">Find out more</a> <a href="/contact"
+                                    class="btn btn--reset btn--default">Get a quote</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div> -->
+
+<header></header>
+<body>Works</body>
+<footer></footer>
