general changes to html, mainly in contact.html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="https://jla.com/sitefiles/dist/main-c94977dd3eac24de953a.css">
 
 
-
+<!-- 
 <header class="header has-metric">
   <div class="header__holder js-header-block">
           <div class="header__top-block">
@@ -1148,20 +1148,20 @@
 
 
           <button class="btn btn--reset btn--primary btn--full-width js-modal header__consult-btn" type="button" name="button" data-modal="754dfeb7-6128-499a-99a8-57b8ef89d70f"><span class="btn__text">Send an enquiry</span></button>
-      <!--<div class="search">
+      <div class="search">
           <span class="field-validation-valid" data-valmsg-for="SearchTerm" data-valmsg-replace="true"></span>
           <input class="search__input" data-val="true" data-val-required="The SearchTerm field is required." id="SearchTerm" name="SearchTerm" placeholder="search" type="search" value="" />
           <label class="search__btn-holder">
               <input type="submit" class="search__submit-btn">
               <i class="icon-svg fas fa-search icon-search"></i>
           </label>
-      </div>-->
+      </div>
   </div>
 </form>
   </div>
 </nav>
 
-</header>
+</header> -->
 
 
 
