moved manifest link

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-
+<link rel="manifest" href="/webmanifest.json" crossOrigin="use-credentials">
 
 <body data-docid="30" data-culture="en-GB">
     <div class="site-area">
