--- a/src/app/contact-servicing-repairs/contact-servicing-repairs.component.html
+++ b/src/app/contact-servicing-repairs/contact-servicing-repairs.component.html
@@ -1,3 +1,4 @@
+
 <body data-docid="2689" data-culture="en-GB">
     <div class="site-area">
         <header class="header has-metric">
@@ -1169,12 +1170,15 @@
         <div class="grid-column js-widget-container"></div>
     </div>
 </div>
+
+
 <div class="site-wide">
     <div class="section backgroundlightgrey margin-top0 padding2 margin-bottom3 theme-default">
     <div class="grid-container grid-container--full-central">
-        <div class="grid-column js-widget-container">
+    <div class="grid-column js-widget-container">
 
-    <div class="wysiwyg"><h1 class="extrabold blue-text padding-top1 lg-padding-top0 sentencecase text-center">Commercial Equipment Repairs &amp; Maintenance</h1>
+<div class="wysiwyg">
+<h1 class="extrabold blue-text padding-top1 lg-padding-top0 sentencecase text-center">Commercial Equipment Repairs &amp; Maintenance</h1>
 <p class="lead mid-blue-text semibold  text-center">Get in touch for laundry, catering, heating, AC and fire support</p>
 <p class="light text-center">If you have a breakdown and need a local engineer quickly, simply report your fault below via phone or form. You can also arrange routine and preventative maintenance visits for your commercial equipment to keep the most critical parts of your business running smoothly.</p>
 </div>
@@ -1605,6 +1609,7 @@
 </div><div class="section backgroundlightgrey section-block padding-top3 padding-bottom1 theme-default">
     <div class="grid-container grid-container--third">
         <div class="grid-column js-widget-container">
+            
 
     <div class="wysiwyg"><p class="extrabold blue-text large-medium-text">We cover the entire UK</p><p class="blue-text">We're there whenever you need us</p><p><img src="https://res.cloudinary.com/jlateam/image/upload/c_lfill,f_auto,g_auto,q_auto,w_1920/v1560245583/JLA-Map-with-van-comp.png" style="width: 75%;"><br></p></div>
 </div>
