--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -18,10 +18,20 @@ a {
     text-decoration: none;
 }
 
+.full-width-page .site-wide {
+    max-width: 100%;
+    padding: 0rem;
+}
+
 .full-width-page .site-wide .section {
     padding-left: 1rem;
     padding-right: 1rem;
 }
+
+.padding-top2 {
+    padding-top: 2rem;
+}
+
 .padding-top3 {
     padding-top: 3rem;
 }
@@ -57,6 +67,14 @@ a {
     margin-bottom: 1rem;
 }
 
+.btn {
+    font-weight: 700;
+    font-size: 0.875rem;
+    text-transform: uppercase;
+    text-decoration: none;
+    display: inline-block;
+}
+
 .btn--default {
     color: #fff;
     padding: 0.625rem 1.25rem;
@@ -67,9 +85,69 @@ a {
     background-color: #0b2240;
 }
 
+.btn--success {
+    border: 1px solid #569501;
+    background-color: #569501;
+    padding: 0.625rem 1.875rem;
+    padding-right: 1.25rem;
+    padding-left: 1.25rem;
+    border-radius: 5px;
+    color: #fff;
+}
+
+.livechat_button a {
+    color: #fff;
+}
+
 .full-width-page .site-wide .section .grid-container {
     max-width: 66.875rem;
     margin: 0 auto;
     overflow: visible;
+}
+
+.header__contact-inner .InfinityNumber a {
+    color: #e8c741;
+}
+
+.header__desktop-nav a:last-of-type {
+    color: #e8c741;
+}
+
+.small-text {
+    font-size: 0.8rem;
+}
+
+ul, ol, p {
+    margin: 0 0 1rem 0;
+}
+
+p {
+    font-weight: 400;
+    margin-bottom: 0.9375rem;
+    font-size: 1rem;
+    line-height: 1.625rem;
+    color: #3c4249;
+}
+
+h3, .h3 {
+    font-size: 1.125rem;
+    line-height: 1.375rem;
+    font-family: "Montserrat",Arial;
+}
+
+h1, .h1 {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+    font-family: "Montserrat",Arial;
+}
+
+.section-block .grid-container > .grid-column {
+    padding-bottom: 0rem;
+}
+.grid-container>.grid-column {
+    max-width: 100%;
+    min-width: 0;
+    padding-left: 0;
+    padding-right: 0;
 }
 
