--- a/src/app/contact-servicing-repairs/contact-servicing-repairs.component.html
+++ b/src/app/contact-servicing-repairs/contact-servicing-repairs.component.html
@@ -2,7 +2,7 @@
 <body data-docid="2689" data-culture="en-GB">
     <div class="site-area">
         <header class="header has-metric">
-    <div class="header__holder js-header-block">
+    <div class="header__holder js-header-block is-locked is-on">
             <div class="header__top-block">
         <div class="header__container">
             <div class="header__trust-metric-holder">
