--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -253,3 +253,16 @@ ul, ol {
     display: block;
     cursor: pointer;
 }
+
+.large-medium-text {
+    font-size: 1.4rem;
+}
+
+.header__holder.is-locked {
+    position: fixed;
+    top: 0;
+}
+
+.header__holder.is-on {
+    transform: translateY(0);
+}
