--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1172,7 +1172,8 @@
 
     <div class="wysiwyg"><p class=" fade-in one text-center"><img alt="OZONE Laundry Disinfection" src="https://res.cloudinary.com/jlateam/image/upload/q_auto/v1592382330/otex/OtexLogoNoStrapLight800x224.png" style="width:15rem; "></p>
 <p class="h1 sentencecase text-center  white-text semibold"><span class="fade-in two extrabold">New Study: </span><span class="fade-in three">JLA’s ozone disinfection system proven to remove all traces of coronavirus in laundry</span></p>
-<p class="fade-in three text-center"><a href="/blog/hygiene/ozone-vs-coronavirus" class="btn btn--default btn--otex">Read more</a></p>
+<p class="fade-in three text-center">
+    <a href="/blog/hygiene/ozone-vs-coronavirus" class="btn btn--default btn--otex">Read more</a></p>
 </div>
 </div>
     </div>
@@ -1212,6 +1213,7 @@
         <div class="grid-column js-widget-container">
 
 <a href="/laundry-equipment" class="service-tile"><img src="https://res.cloudinary.com/jlateam/image/upload/v1584368891/cta/laundry-small.jpg" alt="Laundry Equipment">
+    
 <div class=" text-center text-area">
 <h3 class="extrabold letter-spacing-sm white-text-opacity9">Laundry</h3>
 <p class="white-text-opacity6 line-height-sm light margin-top0">Large capacity appliances designed to meet every laundry room challenge.</p>
