--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -42,11 +42,15 @@
         <div class="header__inner">
             <div class="header__left">
                 <div class="header__logo-holder">
-                    <a href="/">
+                    <!-- <a href="/">
                         <svg class="icon-svg icon-logo" viewBox="0 0 287.8 112.3">
                             <use xlink:href="/sitefiles/src/img/icons/symbol/svg/sprite.symbol.svg#icon-logo"></use>
                         </svg>
-                    </a>
+                    </a> -->
+
+                    <a href="/">
+                        <img src="https://hgcapital.com/wp-content/uploads/2019/03/jla-logo-white.png" style="width:90px;height:35px;"> 
+                       </a>
                 </div>
                     <div class="header__desktop-nav">
                             <a href="/laundry-equipment" target="_self">Laundry</a>
