--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -19,11 +19,18 @@
         <div class="header__inner">
             <div class="header__left">
                 <div class="header__logo-holder">
-                    <a href="/">
+                    <!-- <a href="/">
                         <svg class="icon-svg icon-logo" viewBox="0 0 287.8 112.3">
-                            <use xlink:href="/sitefiles/src/img/icons/symbol/svg/sprite.symbol.svg#icon-logo"></use>
+                            <use xlink:href="src\app\images\jla-logo-blue.png#icon-logo"></use>
+                            <img src="https://hgcapital.com/wp-content/uploads/2019/03/jla-logo-white.png">  
                         </svg>
+                    </a> -->
+                    <!-- <img src="https://images.app.goo.gl/fMWWYN1HsrRRWhb86"> -->
+                    <!-- <img src="D:\jlaFormPoc\src\app\images\JLA-logo.jpg" alt="JLA" width="500" height="600"> -->
+                    <a href="/">
+                     <img src="https://hgcapital.com/wp-content/uploads/2019/03/jla-logo-white.png" style="width:90px;height:35px;"> 
                     </a>
+                  
                 </div>
                     <div class="header__desktop-nav">
                             <a href="/laundry-equipment" target="_self">Laundry</a>
